2019-03-28  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>

	* 0.8
	* who-is-on-app.rkt: define funtion 'now'
	status? use the 'now' function

	* Makefile (production): working tree で sed しない。
	basic auth

2019-03-25  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>

	* 0.7.1
	who-is-on-app.rkt: asynchronous update.

2019-03-23  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>

	* 0.7 who-is-on-app.rkt: status? を定義。
	過去１時間以内に記録が見つかる場合、/users に赤で表示。

2019-03-18  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>

	* update README.md
	* remove useless conf/crontab
	* who-is-on.service:EnvironmentFile must be /srv/who-is-on/.env

2019-03-17  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>

	* 0.6.1 Makefile (install-systemd): systemd のユーザからのインストール先は
	/lib/systemd/system でした。

	* 0.6 who-is-on-app.rkt: get "/"
	* env-template にマジ設定の一部を
	* .gitignore に who-is-on.sqlite3, .env, update.log を無視する


2019-03-16  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>

	* 0.5.5
	* Makefile (install)
	* Makefile (production, development): production 用に url を書き換える。

2019-03-14  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>

	* 0.5.4 update.sh: cron ではなく、コマンド at に 55 \pm 10 で
	自分自身を呼び出すスクリプト。
	* env/.placeholder: 動作に必要な環境変数を .placeholder に書いておく。
	* who-is-on-app.rkt: 127.0.0.1 しかリッスンしない。
	;;(run #:listen-ip #f #:port 8000)
	(run #:port 8000)
	* who-is-on-update.rkt: (pad mac) mac アドレス中のゼロを補完する。

	* 0.5.3.2 bugfix
	/bin/sh には source コマンドがない。bash にはある。
	fix typo, who-is-in → who-is-on
	* 0.5.3 /users/new, /users/create
	update.sh スクリプト。
	who-is-on-app.rkt: ページにバージョン表示。
	update Makefile

	* [0.5.4] cron で決め打ちではなく、
	プラスマイナス n 分 で Mac アドレス採集する。

	* [0.5.3] ユーザの追加ができる。

	* [0.5.3] 括弧つきのバージョン番号は「これから」の意味に使おう。
	予定って意味。

2019-03-13  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>

	* [0.5] （外から curlで）動作確認。http://vm2019.local/who/users など。

	* conf/: crontab -l と nginx/site-enable/who-is-in の中身。

	* [0.4.1] update README.md

	* who-is-on-app.rkt: rewrite get /users use with-output-to-string.
